fix: mobile card spacing

--- a/src/pages/addresses/AddressPage.less
+++ b/src/pages/addresses/AddressPage.less
@@ -66,6 +66,12 @@
     }
   }
 
+  .address-card-row {
+    & > .ant-col {
+      margin-bottom: @margin-md;
+    }
+  }
+
   .address-card-names {
     .address-name-item {
       display: block;
