--- a/src/pages/names/NamePage.less
+++ b/src/pages/names/NamePage.less
@@ -55,4 +55,10 @@
       margin-left: @padding-xs;
     }
   }
+
+  .name-card-row {
+    & > .ant-col {
+      margin-bottom: @margin-md;
+    }
+  }
 }
